# quent

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .rumdl.toml  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.simulator  Dockerfile.webserver  LICENSE  README.md  SECURITY.md  deny.toml  docker-compose.dev.yml  docker-compose.yml  flake.nix  model.md  pixi.toml  test_move
.github/: ops-bot.yaml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: entities.rs  error.rs  lib.rs  plan_tree.rs  query.rs  query_bundle.rs  resource_tree.rs
crates/analyzer/src/entity/: analyzed.rs  mod.rs
crates/analyzer/src/fsm/: analyzed.rs  collection.rs  events.rs  mod.rs  runtime.rs
crates/analyzer/src/resource/: analyzed.rs  collection.rs  events.rs  mod.rs  runtime.rs  tree.rs
crates/analyzer/src/timeline/: mod.rs
crates/analyzer/src/trace/: mod.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: cxx_bridge.rs  lib.rs
crates/codegen/tests/: cxx_bridge_generation.rs
crates/collector/: Cargo.toml  build.rs
crates/collector/client/: Cargo.toml
crates/collector/client/src/: lib.rs
crates/collector/proto/: Cargo.toml  build.rs
crates/collector/proto/src/: lib.rs
crates/collector/server/: Cargo.toml
crates/collector/server/src/: lib.rs  server.rs
crates/collector/src/: client.rs  lib.rs  main.rs  server.rs
crates/entities/: Cargo.toml
crates/entities/src/: error.rs  fsm.rs  lib.rs  relation.rs  resource.rs  span.rs
crates/entities/src/timeline/: mod.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs  q.rs  resource.rs  simulator.rs  trace.rs
crates/exporter/: Cargo.toml
crates/exporter/collector/: Cargo.toml
crates/exporter/collector/src/: lib.rs
crates/exporter/msgpack/: Cargo.toml
crates/exporter/msgpack/src/: lib.rs
crates/exporter/ndjson/: Cargo.toml
crates/exporter/ndjson/src/: lib.rs
crates/exporter/postcard/: Cargo.toml
crates/exporter/postcard/src/: lib.rs
crates/exporter/src/: lib.rs
crates/exporter/types/: Cargo.toml
crates/exporter/types/src/: lib.rs
crates/instrumentation/: Cargo.toml
crates/instrumentation/src/: lib.rs  resource.rs  trace.rs
crates/model/: Cargo.toml
crates/model-macros/: Cargo.toml
crates/model-macros/src/: define_model.rs  entity.rs  entity_macro.rs  event.rs  fsm.rs  fsm_macro.rs  lib.rs  model_macro.rs  resource.rs  resource_derive.rs  resource_group.rs  resource_macro.rs  state.rs  state_macro.rs  unified.rs  util.rs
crates/model/src/: analyze.rs  capacity.rs  fsm_event.rs  lib.rs  model.rs  ref.rs  resource.rs  usage.rs
crates/model/src/v2/: entity.rs  fsm.rs  mod.rs  resource.rs  resource_group.rs
crates/model/tests/: basic_fsm.rs  cross_crate_composition.rs  define_context.rs  define_model.rs  entity_and_events.rs  fsm_macro.rs  fsm_validation.rs  macro_corner_cases.rs  resource_derive.rs  resource_fsm.rs  resource_group.rs  state_macro.rs
crates/server/: Cargo.toml  build.rs
crates/server/bindings/: Attribute.ts  Coordinator.ts  CoordinatorTimestamps.ts  Edge.ts  Engine.ts  EngineImplementationAttributes.ts  List.ts  Operator.ts  OperatorState.ts  Plan.ts  PlanTimestamps.ts  Port.ts  Query.ts  QueryGroup.ts  QueryGroupTimestamps.ts  QueryTimestamps.ts  Struct.ts  WaitingForInputs.ts  Worker.ts  WorkerTimestamps.ts
crates/server/py-bindings/: Attribute.py  BinnedSpan.py  CapacityDecl.py  CapacityKind.py  CapacityValue.py  Edge.py  Engine.py  EngineImplementationAttributes.py  EngineTimestamps.py  Entities.py  EntityRef.py  Fsm.py  List.py  Operator.py  OperatorState.py  Plan.py  PlanTimestamps.py  PlanTree.py  Port.py  Query.py  QueryBundle.py  QueryGroup.py  QueryGroupTimestamps.py  QueryTimestamps.py  Resource.py  ResourceGroup.py  ResourceGroupTimestamps.py  ResourceOperatingState.py  ResourceState.py  ResourceTimeline.py  ResourceTimelineBinned.py  ResourceTimelineBinnedByState.py  ResourceTimelineUse.py  ResourceTree.py  Span.py  State.py  Struct.py  Use.py  Value.py  WaitingForInputs.py  (+2 more)
crates/server/src/: analyzer.rs  error.rs  main.rs
crates/server/ts-bindings/: Attribute.ts  BinnedSpan.ts  CapacityDecl.ts  CapacityKind.ts  CapacityType.ts  CapacityValue.ts  DynamicFsmStateDecl.ts  DynamicFsmTypeDecl.ts  Engine.ts  EngineImplementationAttributes.ts  EngineTimestamps.ts  Entities.ts  EntitiesUI.ts  EntityRef.ts  Fsm.ts  FsmTypeDecl.ts  Operator.ts  OperatorState.ts  Plan.ts  PlanTimestamps.ts  PlanTree.ts  Port.ts  Query.ts  QueryBundle.ts  QueryGroup.ts  QueryGroupTimestamps.ts  QueryTimestamps.ts  Resource.ts  ResourceGroup.ts  ResourceGroupTimestamps.ts  ResourceOperatingState.ts  ResourceState.ts  ResourceTimeline.ts  ResourceTimelineBinned.ts  ResourceTimelineBinnedByState.ts  ResourceTimelineUse.ts  ResourceTree.ts  ResourceTypeDecl.ts  Span.ts  State.ts  (+6 more)
domains/query_engine/analyzer/: Cargo.toml
domains/query_engine/model/: Cargo.toml
domains/query_engine/server/: Cargo.toml  build.rs
domains/query_engine/ui/: Cargo.toml
examples/cpp-integration/bridge/: .gitignore  Cargo.toml  build.rs
examples/cpp-integration/instrumentation/: Cargo.toml  build.rs
examples/cpp-integration/model/: Cargo.toml
examples/readme/: Cargo.toml
examples/readme/src/: lib.rs  main.rs
instrumentation/cpp/: Cargo.toml  build.rs
instrumentation/cpp/examples/: CMakeLists.txt  README.md  basic.cpp
instrumentation/cpp/src/: engine.rs  lib.rs  operator.rs  plan.rs  query.rs  query_group.rs  uuid.rs  worker.rs
instrumentation/rust/: Cargo.toml
instrumentation/rust/examples/: simulator.rs
instrumentation/rust/src/: lib.rs
webserver/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  start.sh
webserver/src/: client.py  config.py  main.py
webserver/src/routers/: engines.py
webserver/tests/: conftest.py  test_client.py  test_engines.py  test_main.py  test_timeline_caching.py
webserver/webserver/: cache.py  client.py  config.py  constants.py  main.py  timeline_caching.py
webserver/webserver/routers/: __init__.py  engines.py
(+590 files in other folders)
