[workspace]
resolver = "3"
members = [
    "crates/analyzer",
    "crates/collector",
    "crates/entities",
    "crates/events",
    "crates/exporter",
    "crates/exporter/ndjson",
    "crates/exporter/collector",
    "crates/server",
    "instrumentation/rust"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.89"
log = {version = "0.4.28", features = ["kv"]}
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-stream = "0.1.17"
tokio-util = "0.7.18"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ts-rs = "11.1.0"
py-rs = "0.1.1"
uuid = {version = "1.18.1", features = ["v7"]}
