[package]
name = "quent-analyzer"
version.workspace = true
edition.workspace =  true

[dependencies]
quent-attributes = { path = "../attributes" }
quent-events = { path = "../events" }
rustc-hash.workspace = true
quent-time = { path = "../time" }
thiserror.workspace = true
uuid.workspace = true
smallvec = {workspace = true, features = ["serde"] }
