[package]
name = "quent-analyzer"
version.workspace = true
edition.workspace =  true
publish.workspace = true
[features]
default = []
ts = ["serde", "ts-rs"]

[dependencies]
quent-attributes = { path = "../attributes" }
quent-events = { path = "../events" }
quent-model = { path = "../model" }
quent-time = { path = "../time" }
quent-exporter-types = { path = "../exporter/types" }
rustc-hash.workspace = true
serde = { workspace = true, optional = true }
smallvec = { workspace = true, features = ["serde"] }
thiserror.workspace = true
ts-rs = { workspace = true, optional = true }
uuid.workspace=true
