[package]
name = "quent-codegen"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
quent-model = { path = "../model" }

[dev-dependencies]
quent-query-engine-model = { path = "../../domains/query_engine/model" }
quent-simulator-model = { path = "../../examples/simulator/model" }
