[package]
name = "quent-codegen"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
convert_case = "0.8"
prettyplease = "0.2"
proc-macro2 = "1"
quent-model = { path = "../model" }
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }

[dev-dependencies]
quent-query-engine-model = { path = "../../domains/query_engine/model" }
quent-simulator-instrumentation = { path = "../../examples/simulator/instrumentation" }
syn = { version = "2", features = ["full", "parsing"] }
