[package]
name = "quent-collector"
edition.workspace = true
version.workspace = true

[features]
default = []
client = []
server = []

[dependencies]
prost.workspace = true
quent-events = { path = "../events" }
quent-exporter-ndjson = { path = "../exporter/ndjson" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features=["rt-multi-thread"]}
tokio-stream.workspace = true
tonic-prost.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-prost-build = "0.14.2"
