[package]
name = "quent-collector"
edition.workspace = true
version.workspace = true

[features]
default = []
client = []
server = []

[dependencies]
dashmap = "6.1.0"
prost.workspace = true
quent-events = { path = "../events" }
quent-exporter = { path = "../exporter" }
quent-exporter-ndjson = { path = "../exporter/ndjson" }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features=["rt-multi-thread"]}
tokio-stream.workspace = true
tonic-prost.workspace = true
tonic.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-prost-build = "0.14.2"
