[package]
name = "quent-collector"
edition.workspace = true
version.workspace = true

[features]
default = []
client = []
server = []

[dependencies]
ciborium = "0.2.2"
dashmap = "6.1.0"
prost.workspace = true
quent-events = { path = "../events" }
quent-exporter = { path = "../exporter" }
quent-exporter-ndjson = { path = "../exporter/ndjson" }
serde.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features=["rt-multi-thread"]}
tokio-stream.workspace = true
tokio-util.workspace = true
tonic-prost.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-prost-build = "0.14.2"
