[package]
name = "quent-entities"
version.workspace = true
edition.workspace =  true

[features]
default = []
q = []

[dependencies]
py-rs = {workspace = true, features = ["uuid-impl", "serde-json-impl"] }
quent-attributes = { path = "../attributes" }
quent-events = { path = "../events" }
quent-time = { path = "../time" }
serde.workspace = true
thiserror.workspace = true
ts-rs = {workspace = true, features = ["uuid-impl", "serde-json-impl"] }
uuid.workspace = true
