[package]
name = "quent-events"
version.workspace = true
edition.workspace =  true

[dependencies]
uuid = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ts-rs = {workspace = true, features = ["uuid-impl", "serde-json-impl"] }
py-rs = {workspace = true, features = ["uuid-impl", "serde-json-impl"] }
