[package]
name = "quent-events"
version.workspace = true
edition.workspace =  true
publish.workspace = true
[features]
default = []

[dependencies]
quent-time = { path = "../time" }
quent-attributes = { path = "../attributes" }
uuid = { workspace = true, features = ["serde"] }
serde.workspace = true
