[package]
name = "quent-instrumentation"
version.workspace = true
edition.workspace = true

[dependencies]
quent-events = { path = "../events" }
quent-exporter = { path = "../exporter" }
quent-exporter-collector = { path = "../exporter/collector" }
quent-exporter-msgpack = { path = "../exporter/msgpack" }
quent-exporter-ndjson = { path = "../exporter/ndjson" }
quent-exporter-postcard = { path = "../exporter/postcard" }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync"]}
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
petgraph = "0.8.3"
quent-collector = { path = "../collector", features = ["server"] }
quent-exporter-ndjson = { path = "../exporter/ndjson" }
rand = "0.9.2"
tokio = { workspace = true, features = ["rt-multi-thread", "sync"]}
tokio-stream.workspace = true
tonic.workspace = true
tracing-subscriber.workspace = true
