[package]
name = "quent-instrumentation"
version.workspace = true
edition.workspace = true
publish.workspace = true
[dependencies]
quent-attributes = { path = "../attributes" }
quent-events = { path = "../events" }
quent-exporter = { path = "../exporter" }
quent-exporter-types = { path = "../exporter/types" }
serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync"]}
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
