[package]
name = "quent-model-macros"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[features]
default = ["serde"]
serde = []

[dependencies]
convert_case = "0.8"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
