[package]
name = "quent-model"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
uuid = { workspace = true, features = ["serde", "v7"] }
serde.workspace = true
quent-model-macros = { path = "../model-macros" }
quent-events = { path = "../events" }
quent-exporter = { path = "../exporter" }
quent-instrumentation = { path = "../instrumentation" }
quent-time = { path = "../time" }

[dev-dependencies]
quent-stdlib = { path = "../stdlib" }
serde_json.workspace = true
