[package]
name = "quent-model"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "quent-model-macros/serde", "uuid/serde"]

[dependencies]
uuid = { workspace = true, features = ["v7"] }
serde = { workspace = true, optional = true }
quent-attributes = { path = "../attributes" }
quent-model-macros = { path = "../model-macros" }
quent-events = { path = "../events" }
quent-exporter = { path = "../exporter" }
quent-instrumentation = { path = "../instrumentation" }
quent-time = { path = "../time" }

[dev-dependencies]
quent-stdlib = { path = "../stdlib" }
serde_json.workspace = true
trybuild = "1"
