[package]
name = "quent-server"
version.workspace = true
edition.workspace =  true

# TODO(johanpel): move this to a sensible bin place

[dependencies]
axum = "0.8.7"
quent-collector = { path = "../collector", features = ["server"] }
quent-exporter-ndjson = { path = "../exporter/ndjson" }
quent-analyzer = { path = "../analyzer" }
quent-entities = { path = "../entities" }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"]}
tokio-stream.workspace = true
tonic.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true
serde_json.workspace = true

[build-dependencies]
quent-entities = { path = "../entities" }
ts-rs = {workspace = true, features = ["uuid-impl", "serde-json-impl"] }
