[package]
name = "quent-server"
version.workspace = true
edition.workspace =  true

[features]
default = []
q = ["quent-events/q", "quent-analyzer/q"]

[dependencies]
axum = { version = "0.8.7" }
quent-collector = { path = "../collector", features = ["server"] }
quent-exporter = { path = "../exporter" }
quent-exporter-ndjson = { path = "../exporter/ndjson" }
quent-analyzer = { path = "../analyzer" }
quent-time = { path = "../time" }
quent-entities = { path = "../entities" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"]}
tokio-stream.workspace = true
tonic.workspace = true
tower-http = { version = "0.6", features = ["cors"] }
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
quent-analyzer = { path = "../analyzer" }
quent-entities = { path = "../entities" }
quent-events =  { path = "../events" }
ts-rs = {workspace = true, features = ["uuid-impl", "serde-json-impl"] }
