[package]
name = "quent"
version.workspace = true
edition.workspace = true

[features]
default = []
q = ["quent-events/q"]

[dependencies]
quent-events = { path = "../../crates/events" }
quent-exporter = { path = "../../crates/exporter" }
quent-exporter-collector = { path = "../../crates/exporter/collector" }
quent-exporter-ndjson = { path = "../../crates/exporter/ndjson" }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync"]}
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
petgraph = "0.8.3"
quent-collector = { path = "../../crates/collector", features = ["server"] }
quent-exporter-ndjson = { path = "../../crates/exporter/ndjson" }
rand = "0.9.2"
rayon = "1.10"
tokio = { workspace = true, features = ["rt-multi-thread", "sync"]}
tokio-stream.workspace = true
tonic.workspace = true
tracing-subscriber.workspace = true

[[example]]
name = "simulator"
required-features = ["q"]
