[package]
name = "quent-collector"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
ciborium = "0.2.2"
dashmap = "6.1.0"
quent-collector-proto = { path = "../proto" }
quent-exporter-types = { path = "../../exporter/types" }
quent-exporter = { path = "../../exporter" }
serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
