[package]
name = "quent-exporter-collector"
version.workspace = true
edition.workspace =  true
publish.workspace = true
[dependencies]
async-trait.workspace = true
serde.workspace = true
quent-collector-client = { path = "../../collector/client" }
quent-events = { path = "../../events" }
quent-exporter-types = { path = "../types" }
uuid.workspace = true
