[package]
name = "quent-exporter-msgpack"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
quent-events = { path = "../../events" }
quent-exporter = { path = "../" }
rmp-serde.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync", "fs", "io-util"]}
uuid.workspace = true
tracing.workspace = true
