[package]
name = "quent-exporter-ndjson"
version.workspace = true
edition.workspace =  true

[dependencies]
async-trait.workspace = true
quent-events = { path = "../../events" }
quent-exporter = { path = "../" }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "fs"]}
uuid.workspace = true
tracing.workspace = true
