[package]
name = "quent-exporter-ndjson"
version.workspace = true
edition.workspace =  true

[features]
default = []
q = ["quent-events/q"]

[dependencies]
async-trait.workspace = true
quent-events = { path = "../../events" }
quent-exporter = { path = "../" }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "fs", "io-util"]}
uuid.workspace = true
tracing.workspace = true
