[package]
name = "quent-exporter-postcard"
version.workspace = true
edition.workspace = true
publish.workspace = true
[dependencies]
async-trait.workspace = true
postcard.workspace = true
quent-events = { path = "../../events" }
quent-exporter-types = { path = "../types" }
serde.workspace = true
tokio = { workspace = true, features = ["sync", "fs", "io-util"]}
uuid.workspace = true
tracing.workspace = true
