[package]
name = "quent-query-engine-analyzer"
version.workspace = true
edition.workspace =  true

[dependencies]
quent-analyzer = { path = "../../../crates/analyzer" }
quent-attributes = { path = "../../../crates/attributes" }
quent-events = { path = "../../../crates/events" }
quent-query-engine-events = { path = "../events" }
quent-query-engine-ui = { path = "../ui" }
quent-time = { path = "../../../crates/time" }
quent-ui = { path = "../../../crates/ui"}
rustc-hash.workspace = true
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
