[package]
name = "quent-query-engine-analyzer"
version.workspace = true
edition.workspace =  true
publish.workspace = true
[dependencies]
quent-analyzer = { path = "../../../crates/analyzer" }
quent-attributes = { path = "../../../crates/attributes" }
quent-events = { path = "../../../crates/events" }
quent-model = { path = "../../../crates/model" }
quent-query-engine-model = { path = "../model" }
quent-query-engine-ui = { path = "../ui" }
quent-time = { path = "../../../crates/time" }
quent-ui = { path = "../../../crates/ui"}
rustc-hash.workspace = true
uuid.workspace = true
