[package]
name = "quent-query-engine-server"
version.workspace = true
edition.workspace =  true
publish.workspace = true
[features]
swagger = ["dep:utoipa", "dep:utoipa-swagger-ui"]
ui = ["dep:mime_guess", "dep:rust-embed"]

[dependencies]
axum = { version = "0.8.7" }
moka = { version = "0.12.13", features = ["future"] }
quent-analyzer = { path = "../../../crates/analyzer" }
quent-collector = { path = "../../../crates/collector/server" }
quent-collector-proto = { path = "../../../crates/collector/proto" }
quent-events = { path = "../../../crates/events" }
quent-exporter-types = { path = "../../../crates/exporter/types" }
quent-query-engine-analyzer = { path = "../../../domains/query_engine/analyzer" }
quent-query-engine-ui = { path = "../../../domains/query_engine/ui" }
quent-time = { path = "../../../crates/time" }
quent-ui = { path = "../../../crates/ui" }
serde.workspace = true
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"]}
tonic.workspace = true
tower-http = { version = "0.6", features = ["cors"] }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tracing.workspace = true
utoipa = { version = "5", features = ["axum_extras", "uuid"], optional = true }
utoipa-swagger-ui = { version = "9", features = ["axum"], optional = true }
uuid.workspace = true
mime_guess = { version = "2", optional = true }
rust-embed = { version = "8", optional = true }
