[package]
name = "quent-query-engine-ui"
version.workspace = true
edition.workspace =  true
publish.workspace = true
[dependencies]
quent-analyzer = { path = "../../../crates/analyzer", features = ["ts"] }
quent-attributes = { path = "../../../crates/attributes" }
quent-query-engine-model = { path = "../model" }
quent-time = { path = "../../../crates/time", features = ["ts"] }
quent-ui = { path = "../../../crates/ui" }
serde.workspace = true
ts-rs.workspace = true
uuid.workspace = true
