[package]
name = "quent-bridge"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "quent_bridge"
crate-type = ["staticlib"]

[dependencies]
cxx = "1"
quent-cpp-example-instrumentation = { path = "../instrumentation" }
quent-events = { path = "../../../crates/events" }
quent-exporter = { path = "../../../crates/exporter" }
quent-instrumentation = { path = "../../../crates/instrumentation" }
quent-model = { path = "../../../crates/model" }
quent-stdlib = { path = "../../../crates/stdlib" }
uuid = { workspace = true, features = ["serde", "v7"] }

[build-dependencies]
cxx-build = "1"
quent-codegen = { path = "../../../crates/codegen" }
quent-cpp-example-instrumentation = { path = "../instrumentation" }
quent-model = { path = "../../../crates/model" }
