[package]
name = "quent-bridge"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "quent_bridge"
crate-type = ["staticlib"]

[dependencies]
cxx = "1"
quent-cpp-example-instrumentation = { path = "../instrumentation" }
quent-stdlib = { path = "../../../crates/stdlib" }

[build-dependencies]
cxx-build = "1"
quent-codegen = { path = "../../../crates/codegen" }
quent-cpp-example-instrumentation = { path = "../instrumentation" }
